bk_ida/gccida/g2/ix86_expand_move
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/i386.c:7235:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  ix86_expand_move( machine_mode mode, rtx *operands) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/i386.c:7310:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( mode_class_0[mode] & 0xFFFFFFFB) == 2 || mode_class_0[mode] == MODE_VECTOR_FLOAT) 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/i386.c:7310:51: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( mode_class_0[mode] & 0xFFFFFFFB) == 2 || mode_class_0[mode] == MODE_VECTOR_FLOAT) 
                                                  ^~~~~~~~~~~~
                                                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/i386.c:7337:46: error: use of undeclared identifier 'machine_mode'
if ( !symbolic_operand_0( v15->fld[0].rtx, ( machine_mode)operands) ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/i386.c:7348:20: error: use of undeclared identifier 'machine_mode'
v24 = force_reg( ( machine_mode)v6, v15); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/i386.c:7356:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_reg_rtx( ( machine_mode)v6); 
                     ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_move/src/obj/i386.o] Error 1
